// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsebleSection Pure not default collapseSettings 1`] = `
<div
  className="general-0-0"
>
  <Aesthetic-RowPure
    className="header-0-1"
    onClick={[Function]}
  >
    <Aesthetic-ColumnPure
      className="headerText-0-4 headerHolder-0-3"
      lg={6}
      md={11}
    >
      <span
        className="title-0-2"
      />
    </Aesthetic-ColumnPure>
    <Aesthetic-ColumnPure
      className="headerHolder-0-3"
      lg={6}
      md={1}
    >
      <Aesthetic-HiddenPure
        className="termedSection-0-6"
        md="down"
      >
        <Aesthetic-RowPure>
          <Aesthetic-ColumnPure
            className="headerColumn-0-7"
            lg={3}
          >
            <div
              className="headerText-0-4"
            />
          </Aesthetic-ColumnPure>
          <Aesthetic-ColumnPure
            className="headerColumn-0-7"
            lg={3}
          >
            <div
              className="headerText-0-4"
            />
          </Aesthetic-ColumnPure>
          <Aesthetic-ColumnPure
            className="headerColumn-0-7"
            lg={6}
          >
            <div
              className="headerText-0-4"
            />
          </Aesthetic-ColumnPure>
        </Aesthetic-RowPure>
      </Aesthetic-HiddenPure>
      <Aesthetic-HiddenPure
        className="headerArrowHolder-0-9"
        lg="up"
        sm="down"
      >
        <SvgIconsMapper
          className="headerArrow-0-10 closed"
          iconName="IconSortLeft"
        />
      </Aesthetic-HiddenPure>
    </Aesthetic-ColumnPure>
  </Aesthetic-RowPure>
  <div
    className="bodyHolder-0-11  closed"
  >
    <div
      className="body-0-5"
    >
      <div>
        Column content
      </div>
    </div>
  </div>
</div>
`;

exports[`CollapsebleSection Pure with headerSettings 1`] = `
<div
  className="general-0-0"
>
  <Aesthetic-RowPure
    className="header-0-1"
    onClick={[Function]}
  >
    <Aesthetic-ColumnPure
      className="headerText-0-4 headerHolder-0-3"
      lg={6}
      md={11}
    >
      <span
        className="title-0-2"
      >
        title
      </span>
    </Aesthetic-ColumnPure>
    <Aesthetic-ColumnPure
      className="headerHolder-0-3"
      lg={6}
      md={1}
    >
      <Aesthetic-HiddenPure
        className="termedSection-0-6"
        md="down"
      >
        <Aesthetic-RowPure>
          <Aesthetic-ColumnPure
            className="headerColumn-0-7"
            lg={3}
          >
            <div
              className="headerText-0-4"
            >
              firstColumnTerm
            </div>
          </Aesthetic-ColumnPure>
          <Aesthetic-ColumnPure
            className="headerColumn-0-7"
            lg={3}
          >
            <div
              className="headerText-0-4"
            >
              secondColumnTerm
            </div>
          </Aesthetic-ColumnPure>
          <Aesthetic-ColumnPure
            className="headerColumn-0-7"
            lg={6}
          >
            <div
              className="headerText-0-4"
            >
              thirdColumnTerm
            </div>
          </Aesthetic-ColumnPure>
        </Aesthetic-RowPure>
      </Aesthetic-HiddenPure>
      <Aesthetic-HiddenPure
        className="headerArrowHolder-0-9"
        lg="up"
        sm="down"
      >
        <SvgIconsMapper
          className="headerArrow-0-10 "
          iconName="IconSortLeft"
        />
      </Aesthetic-HiddenPure>
    </Aesthetic-ColumnPure>
  </Aesthetic-RowPure>
  <div
    className="bodyHolder-0-11 headerCursor-0-8 "
  >
    <div
      className="body-0-5"
    >
      <div>
        Column content
      </div>
    </div>
  </div>
</div>
`;

exports[`CollapsebleSection Pure without headerSettings 1`] = `
<div
  className="general-0-0"
>
  <Aesthetic-RowPure
    className="header-0-1"
    onClick={[Function]}
  >
    <Aesthetic-ColumnPure
      className="headerText-0-4 headerHolder-0-3"
      lg={6}
      md={11}
    >
      <span
        className="title-0-2"
      />
    </Aesthetic-ColumnPure>
    <Aesthetic-ColumnPure
      className="headerHolder-0-3"
      lg={6}
      md={1}
    >
      <Aesthetic-HiddenPure
        className="termedSection-0-6"
        md="down"
      >
        <Aesthetic-RowPure>
          <Aesthetic-ColumnPure
            className="headerColumn-0-7"
            lg={3}
          >
            <div
              className="headerText-0-4"
            />
          </Aesthetic-ColumnPure>
          <Aesthetic-ColumnPure
            className="headerColumn-0-7"
            lg={3}
          >
            <div
              className="headerText-0-4"
            />
          </Aesthetic-ColumnPure>
          <Aesthetic-ColumnPure
            className="headerColumn-0-7"
            lg={6}
          >
            <div
              className="headerText-0-4"
            />
          </Aesthetic-ColumnPure>
        </Aesthetic-RowPure>
      </Aesthetic-HiddenPure>
      <Aesthetic-HiddenPure
        className="headerArrowHolder-0-9"
        lg="up"
        sm="down"
      >
        <SvgIconsMapper
          className="headerArrow-0-10 "
          iconName="IconSortLeft"
        />
      </Aesthetic-HiddenPure>
    </Aesthetic-ColumnPure>
  </Aesthetic-RowPure>
  <div
    className="bodyHolder-0-11 headerCursor-0-8 "
  >
    <div
      className="body-0-5"
    >
      <div>
        Column content
      </div>
    </div>
  </div>
</div>
`;

exports[`CollapsebleSection Pure without headerSettings 2`] = `
<div
  className="general-0-0"
>
  <Aesthetic-RowPure
    className="header-0-1"
    onClick={[Function]}
  >
    <Aesthetic-ColumnPure
      className="headerText-0-4 headerHolder-0-3"
      lg={6}
      md={11}
    >
      <span
        className="title-0-2"
      />
    </Aesthetic-ColumnPure>
    <Aesthetic-ColumnPure
      className="headerHolder-0-3"
      lg={6}
      md={1}
    >
      <Aesthetic-HiddenPure
        className="termedSection-0-6"
        md="down"
      >
        <Aesthetic-RowPure>
          <Aesthetic-ColumnPure
            className="headerColumn-0-7"
            lg={3}
          >
            <div
              className="headerText-0-4"
            />
          </Aesthetic-ColumnPure>
          <Aesthetic-ColumnPure
            className="headerColumn-0-7"
            lg={3}
          >
            <div
              className="headerText-0-4"
            />
          </Aesthetic-ColumnPure>
          <Aesthetic-ColumnPure
            className="headerColumn-0-7"
            lg={6}
          >
            <div
              className="headerText-0-4"
            />
          </Aesthetic-ColumnPure>
        </Aesthetic-RowPure>
      </Aesthetic-HiddenPure>
      <Aesthetic-HiddenPure
        className="headerArrowHolder-0-9"
        lg="up"
        sm="down"
      >
        <SvgIconsMapper
          className="headerArrow-0-10 closed"
          iconName="IconSortLeft"
        />
      </Aesthetic-HiddenPure>
    </Aesthetic-ColumnPure>
  </Aesthetic-RowPure>
  <div
    className="bodyHolder-0-11 headerCursor-0-8 closed"
  >
    <div
      className="body-0-5"
    >
      <div>
        Column content
      </div>
    </div>
  </div>
</div>
`;
